# ozon-advertising-optimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260707_0001_create_optimal_advertising_pressure.py  20260711_0002_create_source_tables.py
dags/: optimal_advertising_pressure_dag.py
db/: __init__.py  connection.py  models.py  queries.py  repository.py
scripts/: seed_postgres.py
services/: __init__.py  extract.py  logging_utils.py  predict.py  preprocessing.py  profit.py  save.py  settings.py
tests/: test_predict.py  test_preprocessing.py  test_profit.py  test_settings.py
