[project]
name = "ozon-advertising-optimizer"
version = "0.1.0"
description = "Optimal advertising pressure calculator for Ozon products."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13,<2.0",
    "pandas>=2.1.2,<2.2",
    "psycopg[binary]>=3.2,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy>=1.4.36,<2.0",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.10,<3.0",
]
dev = [
    "black>=24.0,<26.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["db*", "services*", "scripts*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
